RESOLVED FIXED124853
[WinCairo] Compile fails when GSTREAMER is not used.
https://bugs.webkit.org/show_bug.cgi?id=124853
Summary [WinCairo] Compile fails when GSTREAMER is not used.
peavo
Reported 2013-11-25 12:32:14 PST
Building WinCairo, I get the following compile error: GStreamerUtilities.h(21): fatal error C1083: Cannot open include file: 'gst/gst.h': No such file or directory
Attachments
Patch (1.09 KB, patch)
2013-11-25 12:40 PST, peavo
no flags
peavo
Comment 1 2013-11-25 12:40:40 PST
Philippe Normand
Comment 2 2013-11-25 13:38:18 PST
Comment on attachment 217821 [details] Patch Thanks!
WebKit Commit Bot
Comment 3 2013-11-25 14:06:01 PST
Comment on attachment 217821 [details] Patch Clearing flags on attachment: 217821 Committed r159766: <http://trac.webkit.org/changeset/159766>
WebKit Commit Bot
Comment 4 2013-11-25 14:06:04 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.