[WinCairo] Compile fails when GSTREAMER is not used. https://bugs.webkit.org/show_bug.cgi?id=124853

Patch by peavo@outlook.com <peavo@outlook.com> on 2013-11-25
Reviewed by Philippe Normand.

* platform/graphics/gstreamer/GStreamerUtilities.cpp: Don't include GStreamerUtilities.h when GSTREAMER is not used.

Canonical link: https://commits.webkit.org/143017@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159766 268f45cc-cd09-0410-ab3c-d52691b4dbfc